# Dual_Franka_Collision

./: CMakeLists.txt
include/: actor.h  controller.h  custommath.h  mppi copy.h  mppi(관절별).h  mppi.h  mppi2.h  quadraticprogram.h  robotmodel.h  trajectory.h  zmq_fr3.h
model/fr3_xl_huscky/: door_assets.xml  dual_fr3_actuators.xml  dual_fr3_assets.xml  fr3 (copy).urdf  fr3.urdf  fr3.xml  mjinclude_dual_fr3.xml  scene_dual_fr3.xml
model/fr3_xl_huscky/.history/: mjinclude_door_20231219160049.xml  mjinclude_door_20231219160723.xml  mjinclude_door_20231219160724.xml  scene_dual_fr3_20231219155935.xml  scene_dual_fr3_20231219160740.xml  scene_dual_fr3_20231219160750.xml  scene_dual_fr3_20231219160757.xml  scene_dual_fr3_20231219160820.xml
py_src/: _test_dualarm_collision.py  train_dualarm_collision.py  train_dualarm_collision_conv.py  train_dualarm_collision_qqd.py
src/: actor.cpp  controller.cpp  controller_랜덤동작 dual arm.cpp  main.cc  robotmodel.cpp  simulate.cpp  trajectory.cpp
src/.lh/: controller.cpp.json  cuda.cu.json  main.cc.json  simulate.cpp.json
weight/dual_arm/: best_model_dual_panda_light_0416[0].txt  best_model_dual_panda_light_0416[1].txt  best_model_dual_panda_light_0416[2].txt  best_model_dual_panda_light_0416[3].txt  best_model_dual_panda_light_0416[4].txt  best_model_dual_panda_light_0416[5].txt  q_0424_10000[0].txt  q_0424_10000[1].txt  q_0424_10000[3].txt  q_0424_10000[4].txt  q_0424_10000[5].txt  q_0424_10000[6].txt  q_0424_10000[7].txt  qqd_0424_10000[0].txt  qqd_0424_10000[1].txt  qqd_0424_10000[3].txt  qqd_0424_10000[4].txt  qqd_0424_10000[5].txt  qqd_0424_10000[6].txt  qqd_0424_10000[7].txt  qqd_0424_1000_[0].txt  qqd_0424_1000_[1].txt  qqd_0424_1000_[3].txt  qqd_0424_1000_[4].txt  qqd_0424_1000_[5].txt  qqd_0424_1000_[6].txt  qqd_0424_1000_[7].txt  qqd_0424_100[0].txt  qqd_0424_100[1].txt  qqd_0424_100[3].txt  qqd_0424_100[4].txt  qqd_0424_100[5].txt  qqd_0424_100[6].txt  qqd_0424_100[7].txt  qqd_0425_100000[0].txt  qqd_0425_100000[1].txt  qqd_0425_100000[3].txt  qqd_0425_100000[4].txt  qqd_0425_100000[5].txt  qqd_0425_100000[6].txt  (+64 more)
